--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "body-parser": "^1.20.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "echarts": "^5.3.2",
     "element-ui": "^2.13.2",
+    "express": "^4.17.3",
     "node-sass": "^4.14.1",
+    "request": "^2.88.2",
     "sass-loader": "^10.0.1",
     "vue": "^2.6.11",
     "vue-color": "^2.7.1"
